responsive chat text area

--- a/app/assets/stylesheets/atoms/buttons.scss
+++ b/app/assets/stylesheets/atoms/buttons.scss
@@ -76,3 +76,8 @@
       height: 42px !important;
       padding: 0 !important;
    }
+
+   .chat-send {
+      height: 65px !important;
+      width:  110px;
+   }
