--- a/app/views/static_pages/_navbar_lp.html.erb
+++ b/app/views/static_pages/_navbar_lp.html.erb
@@ -4,10 +4,10 @@
    </div>
    <div class="navigation-list">
       <ul>
-         <li> Features </li>
-         <li> Sports </li>
-         <li> Témoignages </li>
-         <li> Contact </li>
+         <a href="#navigation-features"> Features </a>
+         <a href="#navigation-sports"> Sports </a>
+         <a href="#navigation-testimonies"> Témoignages </a>
+         <a href="#navigation-contact"> Contact </a>
       </ul>
    </div>
    <div class="button-row" >
