--- a/app/views/static_pages/_sports_lp.html.erb
+++ b/app/views/static_pages/_sports_lp.html.erb
@@ -1,4 +1,4 @@
-<div class="sports-wrapper">
+<div id="navigation-sports" class="sports-wrapper">
 
    <div class="title-container">
       <div class="twins">
