--- a/app/views/static_pages/_testimonies_lp.html.erb
+++ b/app/views/static_pages/_testimonies_lp.html.erb
@@ -1,4 +1,4 @@
-<div class="testimonies-container">
+<div id="navigation-testimonies" class="testimonies-container">
     <div class="title-container">
       <div class="twins">
          <h3 class="title"> Témoignages </h3>
