--- a/app/assets/stylesheets/pages/sport_users.css
+++ b/app/assets/stylesheets/pages/sport_users.css
@@ -1,1 +1,6 @@
-/* No CSS *//*# sourceMappingURL=sport_users.css.map */
+@media screen and (max-width: 1100px) {
+  .graph-wrapper {
+    display: none;
+  }
+}
+/*# sourceMappingURL=sport_users.css.map */
