--- a/app/views/users/_edit_performance.html.erb
+++ b/app/views/users/_edit_performance.html.erb
@@ -12,10 +12,12 @@
       <div id="Climbing" class="tabcontent tab-active" style="display:block">
       <%if !current_user.climbing_perf.empty?%>
         <%= render partial: 'users/performances/climbing_edit_form', locals: {user: current_user} %>
-        <br>
-        <br>
-        <h2> Ton historique 🕙</h2>
-        <%= render partial: 'users/graphs/climbing_graph', locals: {user: current_user} %>
+        <div class="graph-wrapper">
+          <br>
+          <br>
+          <h2> Ton historique 🕙</h2>
+          <%= render partial: 'users/graphs/climbing_graph', locals: {user: current_user} %>
+        </div>
       <%else%>
         <div class="">Veux tu faire ce sport ?</div>
         <%= link_to 'Je commence l\'escalade !', sport_users_path(sport: :Climbing),remote: true,  method: :post, :class => "btn-begin begin-#{"climbing"}"%>
@@ -25,10 +27,12 @@
       <div id="Running" class="tabcontent">
       <%if !current_user.running_perf.empty?%>
         <%= render partial: 'users/performances/running_edit_form', locals: {user: current_user} %>
-        <br>
-        <br>
-        <h2> Ton historique 🕙</h2>
-        <%= render partial: 'users/graphs/running_graph', locals: {user: current_user} %>
+        <div class="graph-wrapper">
+          <br>
+          <br>
+          <h2> Ton historique 🕙</h2>
+          <%= render partial: 'users/graphs/running_graph', locals: {user: current_user} %>
+        </div>
       <%else%>
         <div class="tbd">Veux tu faire ce sport ?</div>
         <%= link_to 'Je commence le Running  !', sport_users_path(sport: :Running),remote: true, method: :post, :class => "btn-begin begin-#{"running"}"%>
@@ -38,10 +42,12 @@
       <div id="Workout" class="tabcontent">
       <%if !current_user.workout_perf.empty?%>
         <%= render partial: 'users/performances/workout_edit_form', locals: {user: current_user} %>
-        <br>
-        <br>
-        <h2> Ton historique 🕙</h2>
-        <%= render partial: 'users/graphs/workout_graph', locals: {user: current_user} %>
+        <div class="graph-wrapper">
+          <br>
+          <br>
+          <h2> Ton historique 🕙</h2>
+          <%= render partial: 'users/graphs/workout_graph', locals: {user: current_user} %>
+        </div>
         <%else%>
         <div class="tbd">Veux tu faire ce sport ?</div>
         <%= link_to 'Je commence le Workout !', sport_users_path(sport: :Workout), remote: true,method: :post,:class => "btn-begin begin-#{"Workout"}"%>
@@ -51,10 +57,12 @@
       <div id="Tennis" class="tabcontent">
       <%if !current_user.tennis_perf.empty? %>
       <%= render partial: 'users/performances/tennis_edit_form', locals: {user: current_user} %>
-        <br>
-        <br>
-        <h2> Ton historique 🕙</h2>
-      <%= render partial: 'users/graphs/tennis_graph', locals: {user: current_user} %>
+        <div class="graph-wrapper">
+          <br>
+          <br>
+          <h2> Ton historique 🕙</h2>
+          <%= render partial: 'users/graphs/tennis_graph', locals: {user: current_user} %>
+        </div>
         <%else%>
         <div class="tbd">Veux tu faire ce sport ?</div>
         <%= link_to 'Je commence le Tennis !', sport_users_path(sport: :Tennis,format: "js"), remote: true,method: :post, :class => "btn-begin begin-#{"Tennis"}"%>
