css to move participate below event title

--- a/app/assets/stylesheets/pages/events.scss
+++ b/app/assets/stylesheets/pages/events.scss
@@ -78,3 +78,11 @@
    right: 10px;
    bottom: 10px;
 }
+
+.button-participate-city-show{
+  text-align:center;
+}
+
+.relative-div{
+   position: relative;
+}
