--- a/app/assets/stylesheets/pages/connections/geoloc.scss
+++ b/app/assets/stylesheets/pages/connections/geoloc.scss
@@ -1,13 +1,40 @@
 .container-geoloc{
    display: flex;
+   height: 100%;
+
+   @media screen and (max-width: 1300px){
+      flex-direction: column;
+      gap: 20px;
+
+   }
 }
 
 .mapbox-container{
    flex: 7;
+
+   @media screen and (max-width: 1300px){
+      flex: 5;
+      min-height: 400px;
+      min-width: 100%;
+
+   }
+   @media screen and (max-width: 600px){
+      flex: 0;
+      min-height: 300px;
+      min-width: 350px;
+      max-width: 350px;
+      width: 350px;
+
+   }
 }
 
 .list-container {
    flex : 4;
+
+   @media screen and (max-width: 1300px){
+     flex: 5;
+
+   }
 
 }
 
