--- a/app/assets/stylesheets/atoms/map.css
+++ b/app/assets/stylesheets/atoms/map.css
@@ -40,6 +40,8 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   overflow-x: scroll;
 }
 
