--- a/app/assets/stylesheets/pages/connections/geoloc.css
+++ b/app/assets/stylesheets/pages/connections/geoloc.css
@@ -2,6 +2,17 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  height: 100%;
+}
+
+@media screen and (max-width: 1300px) {
+  .container-geoloc {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    gap: 20px;
+  }
 }
 
 .mapbox-container {
@@ -10,10 +21,40 @@
           flex: 7;
 }
 
+@media screen and (max-width: 1300px) {
+  .mapbox-container {
+    -webkit-box-flex: 5;
+        -ms-flex: 5;
+            flex: 5;
+    min-height: 400px;
+    min-width: 100%;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .mapbox-container {
+    -webkit-box-flex: 0;
+        -ms-flex: 0;
+            flex: 0;
+    min-height: 300px;
+    min-width: 350px;
+    max-width: 350px;
+    width: 350px;
+  }
+}
+
 .list-container {
   -webkit-box-flex: 4;
       -ms-flex: 4;
           flex: 4;
+}
+
+@media screen and (max-width: 1300px) {
+  .list-container {
+    -webkit-box-flex: 5;
+        -ms-flex: 5;
+            flex: 5;
+  }
 }
 
 .scrollable-list {
