LL translate names of sports and update select in event edit form

--- a/app/views/contact_mailer/contact.html.erb
+++ b/app/views/contact_mailer/contact.html.erb
@@ -1,5 +1,8 @@
-<h1>Bonjour </h1>
+<h1>Bonjour cher admin de Fit Feat</h1>
 <p>Comment ça va?</p>
-<p><%=@email%> t'a envoyé un message : </p>
+<p>Un utilisateur vient de t'envoyer un message : </p>
+<p>Son email : <%=@email%></p>
+<p>Son messages : </p>
 <p><%=@message%></p>
+<p>Jette un oeil sur ton site pour voir ce qu'il s'y passe !</p>
 <%=link_to "voir les évenements de Paris", city_url(@city) %>
