--- a/app/views/events/_form_create.html.erb
+++ b/app/views/events/_form_create.html.erb
@@ -31,7 +31,7 @@
           <div class="input">
           <p class="input-name">Sport</p>
             <div class="input-wrapper">
-                <%= form.select(:sport_id, options_for_select(sports.collect{ |s| [s.name, s.id] }, sports.first)) %>
+                <%= form.select(:sport_id, options_for_select(["Choisis un sport" ].concat(sports.collect{ |s | [s.french, s.id] }))) %>
                 <i class="fa-solid fa-bicycle"></i>
             </div>  
           </div>
@@ -83,7 +83,7 @@
           <div class="input">
             <p class="input-name">Ville</p>
             <div class="input-wrapper">
-            <%= form.select(:city_id, options_for_select(cities.collect{ |u| [u.name, u.id] }, cities.first)) %>
+            <%= form.select(:city_id, options_for_select(["Choisis ta ville"].concat(cities.collect{ |u| [u.name, u.id] }))) %>
             <i class="fa-solid fa-location-dot"></i>
           </div> 
         </div>
