--- a/app/views/cities/show.html.erb
+++ b/app/views/cities/show.html.erb
@@ -1,4 +1,4 @@
-<div class="city-show-container form-container">
+<div class=" city-show-container form-container">
     <div class="top-city-container form-container-left">
           <div class="city-img img-fluid"></div>
     </div>
@@ -15,7 +15,7 @@
 
     <div class="event-city-show">
          <div class="card">
-          <p class="card-title"> Rencontre des gens lors d'evenements sportifs </p>
+          <p class="card-title"> Rencontre des sportifs </p>
           <p class="card-icon"> <i class="fa-solid fa-calendar-plus"></i></i> </p> 
           <div class="container-geoloc">
             <div class="list-container">
