--- a/app/assets/stylesheets/pages/city/city.show.css
+++ b/app/assets/stylesheets/pages/city/city.show.css
@@ -29,11 +29,6 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  padding-left: 20px;
 }
 /*# sourceMappingURL=city.show.css.map */
