--- a/app/assets/stylesheets/pages/city/city.show.scss
+++ b/app/assets/stylesheets/pages/city/city.show.scss
@@ -21,7 +21,7 @@
 
    .event-city-show{
       display: flex;
-      justify-content: center;
-      align-items: center;
+      padding-left: 20px;
+
    }
 }
