--- a/app/assets/stylesheets/pages/event/show_detail_event.scss
+++ b/app/assets/stylesheets/pages/event/show_detail_event.scss
@@ -28,7 +28,7 @@
 
 .event-show-main{
    position: absolute;
-   padding: 40px 22px 65px 22px;
+   padding: 40px 22px 32px 22px;
    top: -60px;
    height: 100%;
    background: #FFFFFF;
@@ -59,5 +59,6 @@
       flex-direction: column;
       justify-content: flex-start;
       gap: 9px;
+      margin-bottom: 20px;
    }
 }
