--- a/app/assets/stylesheets/pages/main_pages.scss
+++ b/app/assets/stylesheets/pages/main_pages.scss
@@ -1,6 +1,6 @@
 .container-dashboard{
    width: 100%;
-   max-width: 80%;
+   max-width: 1900px;
    padding:40px;
 
    @media screen and (max-width: 800px) {
