--- a/app/views/static_pages/_convinced_lp.html.erb
+++ b/app/views/static_pages/_convinced_lp.html.erb
@@ -2,7 +2,7 @@
     <div class="convinced-content hero-content">
       <div class="element-container">
           <h1>Convaincu?</h1>
-          <p>N’attend plus un seconde et profite dès maintenant de FitFeat !</p>
+          <p>N’attend plus une seconde et profite dès maintenant de FitFeat !</p>
       </div>
       <div class="linear-background"></div>
       <div class="button-row">
