--- a/app/views/static_pages/_footer_lp.html.erb
+++ b/app/views/static_pages/_footer_lp.html.erb
@@ -1,19 +1,15 @@
 
-<div class="footer-lp">
-  <div class="contain-lp">
-  <div class="cowl">
-    <h1 class="title-alone">FitFeat</h1>
-    
+<div class="footer-lp align-content-start">
+  
+  <div class="justify-content-start">
+  <h1>FitFeat</h1>  
   </div>
-
   <div class="cowl">
     <h3>Liens utiles</h3>
     <ul>
       <li>Features</li>
       <li>Sports</li>
       <li>Témoignages</li>
-      <hr>
-      <li>Contact</li>
     </ul>
   </div>
 
