--- a/app/views/static_pages/_sports_lp.html.erb
+++ b/app/views/static_pages/_sports_lp.html.erb
@@ -5,7 +5,7 @@
          <h3 class="title"> Sports </h3>
          <div class= "title-lign"></div>
       </div>   
-         <p class="para"> Voici tout les sports proposés sur le site</p>
+         <p class="para"> Voici tous les sports proposés sur le site</p>
          <div class="title-underline"> </div>
       </div>
 
