--- a/app/views/static_pages/_features_lp.html.erb
+++ b/app/views/static_pages/_features_lp.html.erb
@@ -11,7 +11,7 @@
    <div class="feature">
       <div class="feature-content">
          <p class="feature-tag"> Feature 1 </p>
-          <h3 class="feature-title"> Restez connecté <br> Avec le sport </h3>
+          <h3 class="feature-title"> Restez connectés <br> Avec le sport </h3>
          <p class="feature-text"> Rencontrez des personnes autour de vous et partagez l'amour du sport que vous avez en commun </p>
          <%= button_to 'Se connecter', new_user_session_path, class: 'button primary'%>
          <p class="feature-number"> 01 </p>
@@ -24,8 +24,8 @@
          <div class="img-wrapper"> <%= image_tag "feature2.png" %> </div>
          <div class="feature-content">
             <p class="feature-tag" > Feature 2 </p>
-            <h3 class="feature-title" style="color:rgb(var(--white))"> Créer ou rejoignez des events sportif </h3>
-            <p class="feature-text" style="color:rgb(var(--white))">Vous avez la possibilité d'organiser ou de rejoindre des événements créer par nos utilisateurs dans plusieurs villes. </p>
+            <h3 class="feature-title" style="color:rgb(var(--white))"> Créer ou rejoignez des événements sportif </h3>
+            <p class="feature-text" style="color:rgb(var(--white))">Vous avez la possibilité d'organiser ou de rejoindre des événements créés par nos utilisateurs dans plusieurs villes. </p>
             <%= button_to 'Se connecter', new_user_session_path, class: 'button primary'%>
             <p class="feature-number" style="color:rgba(var(--white), 0.5)"> 03 </p>
          </div>
@@ -35,7 +35,7 @@
          <div class="feature-content">
             <p class="feature-tag"> Feature 3 </p>
             <h3 class="feature-title" style="color:rgb(var(--white))"> Partagez la passion du sport avec des gens ayant la même expérience </h3>
-            <p class="feature-text" style="color:rgb(var(--white))"> Le site vous propose automatiquement des personnes ayant des performances similaires aux votres dans le but d'apprendre et de s'entraider </p>
+            <p class="feature-text" style="color:rgb(var(--white))"> Le site vous propose automatiquement des personnes ayant des performances similaires aux vôtres dans le but d'apprendre et de s'entraider </p>
             <%=link_to 'Se connecter', new_user_session_path, class: 'button primary'%>
             <p class="feature-number" style="color:rgba(var(--white), 0.5)"> 03 </p>
          </div>
