--- a/app/views/static_pages/new.html.erb
+++ b/app/views/static_pages/new.html.erb
@@ -1,5 +1,5 @@
 <%if !current_user %>
-   <div>
+   <div class="container-fluid">
       <%= render 'navbar_lp'%>
       <%= render 'hero_lp'%>
       <%= render 'features_lp'%>
