--- a/app/views/events/_event_list.html.erb
+++ b/app/views/events/_event_list.html.erb
@@ -12,7 +12,7 @@
           <%= event.date.strftime("%Hh%M")%>
         </div>
 
-        <div class="event-sport-tag"> <%=event.sport.name%> </div>
+        <div class="event-sport-tag"> <%=event.sport.french%> </div>
       </div>
     <%end%> 
   <%end%>
