--- a/app/views/events/_events_around.html.erb
+++ b/app/views/events/_events_around.html.erb
@@ -20,7 +20,7 @@
                   </div>
 
 
-                  <div class="event-sport-tag"> <%=event.sport.name%> </div>
+                  <div class="event-sport-tag"> <%=event.sport.french%> </div>
                 </li>
               <%end%> 
           </ul>
