--- a/app/views/events/_show_info.html.erb
+++ b/app/views/events/_show_info.html.erb
@@ -8,7 +8,7 @@
 
       <div class="box red">
         <h2>Sport</h2>
-        <p><%= @event.sport.name %></p>
+        <p><%= @event.sport.french %></p>
         <i class="fa-solid fa-volleyball" style="font-size: 1.2em"></i>
       </div>
 
