--- a/app/views/sports/index.html.erb
+++ b/app/views/sports/index.html.erb
@@ -13,7 +13,7 @@
   <tbody>
     <% @sports.each do |sport| %>
       <tr>
-        <td><%= sport.name %></td>
+        <td><%= sport.french %></td>
         <td><%= link_to 'Show', sport %></td>
         <td><%= link_to 'Edit', edit_sport_path(sport) %></td>
         <td><%= link_to 'Destroy', sport, method: :delete, data: { confirm: 'Are you sure?' } %></td>
