--- a/app/views/users/_performance_usershow.html.erb
+++ b/app/views/users/_performance_usershow.html.erb
@@ -1,14 +1,14 @@
 <div class="d-flex align-items-start wrapper-performance" style="width:100%">
   <div class="nav flex-column nav-pills me-3 tabs-items" id="v-pills-tab" role="tablist" aria-orientation="vertical">
-      <%# Ajout du 1er bouton en dur avec la classe 'active' et aria-selected=true%>
-      <button class="nav-link active" id="v-pills-<%= @user.sports.first.id%>-tab" data-bs-toggle="pill" data-bs-target="#v-pills-<%= @user.sports[0].id%>" type="button" role="tab" aria-controls="v-pills-<%= @user.sports.first.id%>" aria-selected="true"><%= @user.sports.first.name%></button>
-      <%# Je drop le 1er élément pour éviter la répétition%>
+      <%# Hardcoding first button with class 'active' et aria-selected=true%>
+      <button class="nav-link active" id="v-pills-<%= @user.sports.first.id%>-tab" data-bs-toggle="pill" data-bs-target="#v-pills-<%= @user.sports[0].id%>" type="button" role="tab" aria-controls="v-pills-<%= @user.sports.first.id%>" aria-selected="true"><%= @user.sports.first.french%></button>
+      <%# Then drop first button to prevent repetition%>
      <% @user.sports.drop(1).each do |sport| %>
-            <button class="nav-link" id="v-pills-<%= sport.id%>-tab" data-bs-toggle="pill" data-bs-target="#v-pills-<%= sport.id%>" type="button" role="tab" aria-controls="v-pills-<%= sport.id%>" aria-selected="false"><%= sport.name%></button>
+            <button class="nav-link" id="v-pills-<%= sport.id%>-tab" data-bs-toggle="pill" data-bs-target="#v-pills-<%= sport.id%>" type="button" role="tab" aria-controls="v-pills-<%= sport.id%>" aria-selected="false"><%= sport.french%></button>
      <%end%>
   </div>
    <div class="tab-content tabs-content" id="v-pills-tabContent">
-   <%# Ajout du 1er content en dur avec la classe 'active' et 'show'%>
+   <%# Adding first content with class 'active' and 'show'%>
       <div class="tab-pane fade active show" id="v-pills-<%= @user.sports.first.id%>" role="tabpanel" aria-labelledby="v-pills-<%= @user.sports[0].id%>-tab">
             <div class="card">
                   <p class="card-title"> Performance </p>
