fix responsive testimonies contact and convinced hero

--- a/app/assets/stylesheets/pages/landing-page/convinced.css
+++ b/app/assets/stylesheets/pages/landing-page/convinced.css
@@ -81,4 +81,15 @@
     position: absolute;
   }
 }
+
+@media screen and (max-width: 600px) {
+  .convinced-container {
+    position: relative;
+    max-width: 600px;
+    right: -50px;
+  }
+  .convinced-content {
+    position: absolute;
+  }
+}
 /*# sourceMappingURL=convinced.css.map */
