--- a/app/views/static_pages/_testimonies_lp.html.erb
+++ b/app/views/static_pages/_testimonies_lp.html.erb
@@ -21,7 +21,7 @@
             <span class="fa fa-star checked"></span>
             <span class="fa fa-star"></span>
             </div>
-            <p>Une très belle expérience, l'un des meilleur site que j'ai pu voir et utiliser de toute ma vie. J'ai fais de très belles rencontres sportives et je me suis dépassée</p>
+            <p>Une très belle expérience, l'un des meilleurs site que j'ai pu voir et utiliser de toute ma vie. J'ai fais de très belles rencontres sportives et je me suis dépassée</p>
          </div>
 
          <div class="cardy cardy-2">
@@ -34,7 +34,7 @@
                   <span class="fa fa-star checked"></span>
                   <span class="fa fa-star checked"></span>
             </div>
-            <p> Vraiment Génial ! J'ai pu faire énormément de sport en duo et en trio je recommande fortement ce site, j'ai aussi passé de très bonne 3ème mi-temps 🍺</p>
+            <p> Vraiment Génial ! J'ai pu faire énormément de sport en duo et en trio je recommande fortement ce site, j'ai aussi passé de très bonnes 3ème mi-temps 🍺</p>
          </div>
 
          <div class="cardy cardy-3">
@@ -73,7 +73,7 @@
                <span class="fa fa-star checked"></span>
                <span class="fa fa-star checked"></span>
          </div>
-            <p> INCROYABLE !! J'ai pu faire du sport avec des personnes vraiment cool et sociable, de très belles rencontres et de grosses séances de sport, j'attends la prochaine avec plus d'impatience que le prochain scan de One Piece !</p>
+            <p> INCROYABLE !! J'ai pu faire du sport avec des personnes vraiment cool et sociables, de très belles rencontres et de grosses séances de sport, j'attends la prochaine avec plus d'impatience que le prochain scan de One Piece !</p>
          </div>
     </div>
 </div>    
