--- a/app/assets/stylesheets/pages/landing-page/contact.css
+++ b/app/assets/stylesheets/pages/landing-page/contact.css
@@ -94,6 +94,45 @@
   margin: auto;
 }
 
+@media screen and (max-width: 1600px) {
+  .contact-wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    position: relative;
+  }
+  .element-contain {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .container-left {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .img-left {
+    height: auto;
+  }
+
+  .container-right{
+    right: 0px;
+    top: -100px;
+   
+  }
+}
+
 @media screen and (max-width: 1200px) {
   .contact-wrapper {
     display: -webkit-box;
@@ -125,6 +164,12 @@
   .img-left {
     height: auto;
   }
+
+  .container-right{
+    right: 0px;
+    top: -100px;
+   
+  }
 }
 
 @media screen and (max-width: 900px) {
@@ -151,6 +196,41 @@
     width: 100%;
     max-width: 700px;
     height: auto;
+  }
+
+  .container-right{
+    top: 20px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .contact-wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .element-contain {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    gap: 0px;
+  }
+  .img-left {
+    width: 400px !important;
+    max-width: 400px !important;
+    height: auto;
+  }
+
+  .container-right{
+    right: 60px;
   }
 }
 /*# sourceMappingURL=contact.css.map */
