--- a/app/assets/stylesheets/pages/landing-page/sports.css
+++ b/app/assets/stylesheets/pages/landing-page/sports.css
@@ -141,4 +141,11 @@
     border: none;
   }
 }
+
+@media screen and (max-width: 600px) {
+  .cart-contain {
+    border: none;
+    max-width: 500px;
+  }
+}
 /*# sourceMappingURL=sports.css.map */
