change button edit password

--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -32,9 +32,14 @@
                     </div> 
                 </div>
             </div>
-            <div class="actions">
-              <%= f.submit "Changer mon mot de passe" %>
-            </div>
+
+            <div class="bottom-signup bottom">
+              <div class="input">
+                <div class="actions">
+                <%= f.submit "Changer mon mot de passe" %>
+                </div>
+              </div>  
+            </div>  
           <% end %>
     </div>    
   </div>
