--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,43 +1,72 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+<div class="signup-container form-container">
+  <div class="form-container-right">
+    <div class="right-content">
+      <div class="top-element">
+        <div class="twins">
+          <h1 class="title">Modifie ton compte</h1>
+          <div class ="modif-lign title-lign"> </div>
+        </div>
+      </div>
+      <div class="middle-element">
+        <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+          <%= render "devise/shared/error_messages", resource: resource %>
+          <div class= "middle-content-email">
+            <div class="modify-email input">
+              <p class="input-name">Email</p>
+              <div class= "input-wrapper">
+                <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: "Rentrez votre email"%>
+                <i class="fa-solid fa-envelope"></i>
+              </div>
+            </div>
+          </div>
+          <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+            <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+          <% end %>
+          <div class ="middle-content-password">
+            <div class="input">
+              <p class="input-name">Mot de passe   <i>(ne pas remplir si tu ne veux pas le changer)</i><br />
+                <% if @minimum_password_length %>
+                  <span>(<%= @minimum_password_length %> caractères minimum)</span>
+                <% end %>
+              </p>
+              <div class="input-wrapper">
+                <%= f.password_field :password, autocomplete: "new-password", placeholder: "Rentrez votre nouveau mot de passe" %>
+                <i class="fa-solid fa-lock"></i>
+              </div>
+            </div>
+          </div>
+          <div class ="middle-content-password">
+            <div class="input">
+              <div class="input-wrapper">
+                <%= f.password_field :password_confirmation, autocomplete: "new-password", placeholder: "Confirmer votre mot de passe" %>
+                <i class="fa-solid fa-lock"></i>
+              </div>
+            </div>
+          </div>
+          <div class ="middle-content-password">
+            <div class="input">
+              <p class="input-name">Mot de passe <i>(Nous avons besoin de ton mot de passe pour confirmer les modifications)</i></p>
+              <div class="input-wrapper">
+                <%= f.password_field :current_password, autocomplete: "new-password" %>
+                <i class="fa-solid fa-lock"></i>
+              </div>
+            </div>
+          </div>
+          <div class="actions">
+            <%= f.submit "Mettre à jour", class: "button primary" %>
+          </div>
+        <% end %>
+        <br>
+        <div class="top-element pt-5">
+        <h2>Pas satisfait?</h2>
+          <div class="twins my-3">
+            <h1 class="title mx-2">Supprime ton compte</h1>
+            <div class ="modif-lign title-lign"> </div>
+          </div>
+          <%= button_to "Supprimer mon compte", registration_path(resource_name), class: 'button delete-btn', data: { confirm: "Es-tu sûr?" }, method: :delete %></p>
+          <%= link_to "Retour", :back %>
+        </div>
+      </div>
+    </div>
   </div>
-
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-    <% if @minimum_password_length %>
-      <br />
-      <em><%= @minimum_password_length %> characters minimum</em>
-    <% end %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "current-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Update" %>
-  </div>
-<% end %>
-
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
+</div>
