changed title of image part for event creation

--- a/app/views/events/_form_create.html.erb
+++ b/app/views/events/_form_create.html.erb
@@ -13,7 +13,7 @@
           <% end %>
 
         <div class="input"> 
-            <p class="input-name">Images</p>
+            <p class="input-name">Image de l'évènement</p>
             <div class="input-wrapper">
              <%= file_field_tag :image %>
             </div>  
