--- a/app/assets/stylesheets/pages/user/show.scss
+++ b/app/assets/stylesheets/pages/user/show.scss
@@ -5,6 +5,7 @@
 
 .notif-collapse{
 height: 100% !important;
+max-height: 100% !important;
 
 }
 
@@ -18,6 +19,7 @@ height: 100% !important;
    gap: 30px;
 
    @media screen and (max-width: 1150px) {
+      display: flex;
       flex-direction: column;
       gap:0px
    }
@@ -28,6 +30,10 @@ height: 100% !important;
       flex: 6;
       position: relative;
       overflow: hidden;
+
+      @media screen and (max-width: 1150px) {
+         max-height: 163px ;
+      }
 
       .read-all{
          position: absolute;
