--- a/app/views/messages/_friends_list.html.erb
+++ b/app/views/messages/_friends_list.html.erb
@@ -7,17 +7,15 @@
       <% current_user.friends.each do |friend|%>
         <li>
           <div class="d-flex gap-2">
+            <%if friend.avatar.attached?%>
+              <%= image_tag friend.avatar, alt: 'avatar', :class => "events-avatar" %>
+            <%else%>
+              <%= image_tag "defaultavatar.png", alt: 'avatar', :class => "events-avatar" %>
+            <%end%>
             <%if current_user.conversation(friend).present?%>
-
-              <%if friend.avatar.attached?%>
-                <%= image_tag friend.avatar, alt: 'avatar', :class => "events-avatar" %>
-              <%else%>
-                <%= image_tag "defaultavatar.png", alt: 'avatar', :class => "events-avatar" %>
-              <%end%>
-
               <%= link_to friend.full_name, message_path(current_user.last_message(friend), user: friend), remote: :true, method: :patch, class: "friend-#{friend.id} user-link"%>
             <%else%>
-              <%= link_to friend.full_name, messages_path(@message, new: true, user: friend), remote: :true, method: :post, class: "friend-#{friend.id}" %>
+              <%= link_to friend.full_name, messages_path(@message, new: true, user: friend), remote: :true, method: :post, class: "friend-#{friend.id} user-link" %>
             <%end%>
           </div>
         </li>
